kubernetes/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - image: something_status_squares:latest
        imagePullPolicy: Always
        name: dashboard
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
