kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  ports:
  - name: default
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dashboard
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
