kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/$ /cgi-bin/dashboard;
spec:
  rules:
  - host: dashboard.company.com
    http:
      paths:
      - path: /
        backend:
          serviceName: dashboard
          servicePort: 80
  tls:
  - hosts:
     - dashboard.company.com
